swagger added to auction
