# controllers/docs/swagger.yaml
@@ -37,6 +37,19 @@ definitions:
       password:
         type: string
     type: object
+  models.NewAuction:
+    properties:
+      created_at:
+        type: string
+      duration:
+        type: string
+      product_id:
+        type: string
+      seller_id:
+        type: string
+      start_price:
+        type: number
+    type: object
   models.NewProductInfo:
     properties:
       brand:
@@ -74,6 +87,63 @@ info:
   title: go-auction
   version: "1.0"
 paths:
+  /auction/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a auction
+      operationId: get-auction
+      parameters:
+      - description: Get Auction Data
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Succesful
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get Auction
+      tags:
+      - auction
+  /auction/new:
+    post:
+      consumes:
+      - application/json
+      description: New auction for product
+      operationId: new-auction
+      parameters:
+      - description: New Auction Data
+        in: body
+        name: userInfo
+        required: true
+        schema:
+          $ref: '#/definitions/models.NewAuction'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Auction succesfully created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Start new auction
+      tags:
+      - auction
   /auth/login:
     post:
       consumes:
